# skebap

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skebap_backend/: api.py  app.py  db.py  frontend.py  models.py
skebap_backend/static/: main.css
skebap_backend/templates/: base.html  new.html  view.html
