[tool.poetry]
name = "skebap_backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.24"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
jinja2-fragments = "^1.3.0"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.343"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
